2013-08-05  Richard Frith-Macdonald <rfm@gnu.org>

        * LogTool.m: Tool to generate logs
        * Terminate.m: Cleanups
        * GNUmakefile: Build new tool
        * ECCL.h: Document new tool

2013-07-12  Richard Frith-Macdonald <rfm@gnu.org>

        * EcProcess.h: New method to get EC user directory
        * EcProcess.m: implement new method
        * EcCommand.m: Add simple auto compress/delete of logs
        CompressLogsAfter and DeleteLogsAfter control this.

2013-07-06  Richard Frith-Macdonald <rfm@gnu.org>

        * EcConsole.m: Strip spaces from command line to avoid a space
        at end of line causing the line terminator to be treated as an
        argument.

2013-04-07  Richard Frith-Macdonald <rfm@gnu.org>

        * EcControl.m:
	* EcAlerter.h:
	* EcAlerter.m:
        * Alaertconfig.plist:
        More restrucuturing plus addition of rules options for improving
        formatting of output messages and handling alerts due to alarms.
        Add some example alert configuration.

2013-04-06  Richard Frith-Macdonald <rfm@gnu.org>

        * EcControl.m:
	* EcAlerter.h:
	* EcAlerter.m:
        Restructure for better integration of alrm system with alert system.
        Send critical alarms as alerts and major alarms as errors.
        Repeat delivery of outstanding critical/major alarms periodically
        (still need to make this period configurable).
        Send clear message when a major/critical alarm is cleared, trying
        to get mail clients to replace original email with the clear so the             recipient can tell a problem has gone away.

2013-04-05  Richard Frith-Macdonald <rfm@gnu.org>

        * EcControl.m: Fix to get 'control on <host> ...' to work while
        connected to a specific server.

2013-03-22: Niels Grewe <niels.grewe@halbordnung.de>

	* EcControl.m: Fix bug that could remove a alerter when it was still
	needed.

2013-03-18: Niels Grewe <niels.grewe@halbordnung.de>

	* EcAlerter.h
	* EcAlerter.m: